# modern-cmake

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  build-android.conf.defaults  build-android.sh  build-web.sh  push-android-lib.sh
cmake/: version.h.in
core/: CMakeLists.txt
core/cmake/: version.h.in
core/src/core/: core.cpp  core.h
include/core/: core.h
pc/: CMakeLists.txt
pc/src/: use_core.cpp
src/core/: core.cpp
utils/: CMakeLists.txt  use_core.cpp
utils/src/: use_boost.cpp  use_ceres.cpp  use_core.cpp  use_eigen.cpp  use_lyra.cpp  use_range.cpp  use_spdlog.cpp
